tests/transpiler/x/py/cross_join_triple.py
# Generated by Mochi transpiler v0.10.34 on 2025-07-22 06:16 +0700
from dataclasses import dataclass
from typing import List, Dict

nums = [1, 2]
letters = ["A", "B"]
bools = [True, False]
@dataclass
class Combo:
    n: int
    l: any
    b: any

combos = [Combo(n, l, b) for n in nums for l in letters for b in bools]
print("--- Cross Join of three lists ---")
for c in combos:
    print(" ".join(str(x) for x in [c["n"], c["l"], c["b"]]).rstrip())
